<resources>
    <string name="app_name">Nescafe</string>

    <!--  Bottom Menu  -->
    <string name="home">Home</string>
    <string name="flavors">Flavors</string>
    <string name="machines">Machines</string>
    <string name="assemble_box">Assemble your box</string>
    <string name="profile">Profile</string>

    <!--  ImageView Descriptions  -->
    <string name="image_description_shopping_bag">shopping bag icon</string>
    <string name="image_description_search">search icon</string>
    <string name="image_description_signature">signature icon</string>

    <!--  Assemble Box  -->
    <string name="choose_your_box_size">Choose your box size \n50 or 100 capsules</string>
    <string name="button_50">50</string>
    <string name="button_100">100</string>
    <string name="saved_boxes">Saved boxes</string>

    <!--  Profile  -->
    <string name="profile_title">Profile</string>
    <string name="fidelity_points">%s Fidelity club points</string>
    <string name="recent_orders_title">Recent orders</string>
    <string name="order_card_number">Order: %s</string>
    <string name="order_card_date">Order date: %s</string>
    <string name="order_card_total_price">Price total: R$%s</string>
    <string name="order_track_number">Track number: %s</string>
    <string name="see_all">See all</string>
    <string name="sign_now">Sign now</string>
    <string name="my_coupons">My coupons</string>
    <string name="account_information">Account information</string>
    <string name="personal_data">Personal data</string>
    <string name="points_program">Points program</string>
    <string name="logout">Logout</string>
    <string name="purchased_products">Products purchased</string>
    <string name="order_summary">Order summary</string>
    <string name="sub_total">Sub total</string>
    <string name="shipping_and_handling">Shipping and handling</string>
    <string name="total">Total</string>
    <string name="order_detail_title">Order: %s</string>
    <string name="track_number">Track number: %s</string>
    <string name="currency_real_value">R$%s</string>
    <string name="item_product_quantity">%d x</string>
    <string name="order_details">Details</string>
    <!--  See All Titles -->
    <string name="my_orders">My orders</string>
    <!--  Order status  -->
    <string name="order_status_waiting_credit_card_confirmation">Waiting credit card confirmation</string>
    <string name="order_status_separation_process">Separation process</string>
    <string name="order_status_in_transit">In transit</string>
    <string name="order_status_in_sent">Sent</string>


</resources>