<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.profile.ui.activities.OrderDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:elevation="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_left">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_title"
                style="@style/Text.AppBarTitle"/>

        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/black"
            app:cardCornerRadius="5dp"
            android:elevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorSurface"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp">

                <TextView
                    android:id="@+id/tvOrderTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_card_number"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvOrderStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnSurface"
                    tools:text="Separation process" />

                <TextView
                    android:id="@+id/tvOrderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/order_card_date"
                    android:textColor="?attr/colorOnSurface" />

                <TextView
                    android:id="@+id/tvOrderTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_card_total_price"
                    android:textColor="?attr/colorOnSurface" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <View
                        android:id="@+id/viewStatus1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@color/grey" />

                    <View
                        android:id="@+id/viewStatus2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@color/grey" />

                    <View
                        android:id="@+id/viewStatus3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@color/grey" />

                    <View
                        android:id="@+id/viewStatus4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/grey" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvTrackNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/order_track_number"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="2dp"
                    android:textColor="?attr/colorOnSurface" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="20dp"
            android:text="@string/purchased_products"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardOrder" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tvProducts"/>

        <TextView
            android:id="@+id/tvOrderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/order_summary"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerProducts" />

        <TextView
            android:id="@+id/tvSubtotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/sub_total"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOrderSummary"/>

        <TextView
            android:id="@+id/tvSubtotalPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/currency_real_value"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOrderSummary"/>

        <TextView
            android:id="@+id/tvShippingAndHandlingPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/shipping_and_handling"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubtotalPrice"/>

        <TextView
            android:id="@+id/tvShippingAndHandlingPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/currency_real_value"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubtotalPriceValue"/>

        <TextView
            android:id="@+id/tvPriceTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/total"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvShippingAndHandlingPrice"/>

        <TextView
            android:id="@+id/tvPriceTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/currency_real_value"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvShippingAndHandlingPriceValue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
