<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    card_view:cardCornerRadius="5dp"
    android:layout_margin="8dp"
    card_view:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/tvOrderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_card_number"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvOrderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Separation process" />

        <TextView
            android:id="@+id/tvOrderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_card_date"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/tvOrderTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_card_total_price" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="4"
                android:layout_marginBottom="5dp">

                <View
                    android:id="@+id/viewStatus1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:layout_marginEnd="10dp"/>

                <View
                    android:id="@+id/viewStatus2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:layout_marginEnd="10dp"/>

                <View
                    android:id="@+id/viewStatus3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:layout_marginEnd="10dp"/>

                <View
                    android:id="@+id/viewStatus4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/grey"/>

            </LinearLayout>

        <Button
            android:id="@+id/btDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_details"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="?attr/colorOnPrimary"
            android:backgroundTint="?attr/colorPrimary" />

    </LinearLayout>

</androidx.cardview.widget.CardView>